[package]
name = "async-handle"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A reference-counted async RwLock"
readme = "./README.md"
license = "MIT"
keywords = ["rwlock", "handle", "mutex", "lock", "asynchronous"]
categories = ["asynchronous", "concurrency"]

[dependencies]
async-rwlock = "1"
futures-lite = "1"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
