[package]
name = "async-handle"
version = "0.1.2"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A reference-counted async RwLock"
readme = "./README.md"
license = "MIT"
keywords = ["rwlock", "handle", "mutex", "lock", "asynchronous"]
categories = ["asynchronous", "concurrency"]
repository = "https://github.com/khonsulabs/async-handle"

[dependencies]
async-rwlock = "1"
futures-lite = "1"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
